fixed close icon color, alignment of main section

--- a/src/components/Alerts/src/alert.css
+++ b/src/components/Alerts/src/alert.css
@@ -11,6 +11,12 @@
   justify-content: space-between;
 }
 
+.denhaag-alert__main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .denhaag-alert .utrecht-paragraph {
   margin-block-end: 0;
 }
@@ -39,12 +45,16 @@
   color: var(--denhaag-alert-error-text-color);
 }
 
-.denhaag-alert[variant="error"] > .denhaag-alert__icon {
+.denhaag-alert[variant="error"] .denhaag-alert__icon {
   color: var(--denhaag-alert-error-icon-color);
 }
 
 .denhaag-alert[variant="error"] .denhaag-button {
   background-color: var(--denhaag-alert-error-icon-color);
+}
+
+.denhaag-alert[variant="error"] .denhaag-alert__close {
+  color: var(--denhaag-alert-error-close-icon-color);
 }
 
 .denhaag-alert[variant="info"] {
@@ -59,12 +69,16 @@
   color: var(--denhaag-alert-info-text-color);
 }
 
-.denhaag-alert[variant="info"] > .denhaag-alert__icon {
+.denhaag-alert[variant="info"] .denhaag-alert__icon {
   color: var(--denhaag-alert-info-icon-color);
 }
 
 .denhaag-alert[variant="info"] .denhaag-button {
   background-color: var(--denhaag-alert-info-action-button-color);
+}
+
+.denhaag-alert[variant="info"] .denhaag-alert__close {
+  color: var(--denhaag-alert-info-close-icon-color);
 }
 
 .denhaag-alert[variant="success"] {
@@ -79,12 +93,16 @@
   color: var(--denhaag-alert-success-text-color);
 }
 
-.denhaag-alert[variant="success"] > .denhaag-alert__icon {
+.denhaag-alert[variant="success"] .denhaag-alert__icon {
   color: var(--denhaag-alert-success-icon-color);
 }
 
 .denhaag-alert[variant="success"] .denhaag-button {
   background-color: var(--denhaag-alert-success-action-button-color);
+}
+
+.denhaag-alert[variant="success"] .denhaag-alert__close {
+  color: var(--denhaag-alert-success-close-icon-color);
 }
 
 .denhaag-alert[variant="warning"] {
@@ -99,7 +117,7 @@
   color: var(--denhaag-alert-warning-text-color);
 }
 
-.denhaag-alert[variant="warning"] > .denhaag-alert__icon {
+.denhaag-alert[variant="warning"] .denhaag-alert__icon {
   color: var(--denhaag-alert-warning-icon-color);
 }
 
@@ -107,9 +125,13 @@
   background-color: var(--denhaag-alert-warning-action-button-color);
 }
 
+.denhaag-alert[variant="warning"] .denhaag-alert__close {
+  color: var(--denhaag-alert-warning-close-icon-color);
+}
+
 .denhaag-alert__content {
-  padding-inline-start: var(--denhaag-alert-content-padding-inline-start);
-  padding-inline-end: var(--denhaag-alert-content-padding-inline-end);
+  margin-inline-start: var(--denhaag-alert-content-margin-inline-start);
+  margin-inline-end: var(--denhaag-alert-content-margin-inline-end);
 }
 
 /* The position of the button is configurable with padding of alert__content and alert */
